<resources>
    <string name="app_name">jetpack</string>

    <!-- Menu -->
    <string name="menu_home">首頁</string>
    <string name="menu_category">分類</string>
    <string name="menu_collect">收藏</string>
    <string name="menu_account">帳號</string>
    <string name="menu_cart">購物車</string>

    <!-- Login -->
    <string name="login_account">請輸入Email或手機</string>
    <string name="login_password">請輸入密碼</string>
    <string name="login_submit">登入</string>
    <string name="login_remember_password">記住密碼</string>
    <string name="login_forgot">忘記密碼?</string>
    <string name="login_register">註冊會員</string>

    <!-- ForgotPassword -->
    <string name="forgot_password_title">忘記密碼</string>
    <string name="forgot_password_message">請輸入您申請XXX所使用的手機號碼</string>
    <string name="forgot_password_phone_number">手機號碼</string>
    <string name="forgot_password_code_button">取得驗證碼</string>
    <string name="forgot_password_code">驗證碼</string>
    <string name="forgot_password_new_password">請輸入新密碼</string>
    <string name="forgot_password_new_password_again">請再次輸入新密碼</string>
    <string name="forgot_password_submit">確認送出</string>
    <string name="forgot_password_warn_message">密碼為8~16位數，須包含大寫與小寫英文及數字</string>

    <!-- Dialog -->
    <string name="dialog_message_exit">是否要離開APP?</string>
    <string name="dialog_title">提示</string>
    <string name="login_back_button">先逛逛看吧!</string>
</resources>