<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuHome"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_baseline_home_24" />
    <item
        android:id="@+id/menuCategory"
        android:title="@string/menu_category"
        android:icon="@drawable/ic_baseline_list_24" />
    <item
        android:id="@+id/menuCollect"
        android:title="@string/menu_collect"
        android:icon="@drawable/ic_baseline_favorite_24" />
    <item
        android:id="@+id/menuAccount"
        android:title="@string/menu_account"
        android:icon="@drawable/ic_baseline_person_24" />
    <item
        android:id="@+id/menuCart"
        android:title="@string/menu_cart"
        android:icon="@drawable/ic_baseline_shopping_cart_24" />
</menu>